tests/snapshots/sdk_conversion_snapshots__codex__codex_multi_turn_to_ir.snap
---
source: tests/sdk_conversion_snapshots.rs
expression: ir
---
{
  "messages": [
    {
      "role": "system",
      "content": [
        {
          "type": "text",
          "text": "You are a helpful assistant."
        }
      ]
    },
    {
      "role": "user",
      "content": [
        {
          "type": "text",
          "text": "What is 2+2?"
        }
      ]
    },
    {
      "role": "assistant",
      "content": [
        {
          "type": "text",
          "text": "2+2 equals 4."
        }
      ]
    },
    {
      "role": "user",
      "content": [
        {
          "type": "text",
          "text": "What about 3+3?"
        }
      ]
    }
  ]
}
