tests/snapshots/sdk_conversion_snapshots__codex__codex_receipt_to_response.snap
---
source: tests/sdk_conversion_snapshots.rs
expression: resp
---
{
  "id": "[id]",
  "model": "codex-mini-latest",
  "output": [
    {
      "type": "message",
      "role": "assistant",
      "content": [
        {
          "type": "output_text",
          "text": "Hello! I can help with that."
        }
      ]
    }
  ],
  "usage": {
    "input_tokens": 100,
    "output_tokens": 50,
    "total_tokens": 150
  },
  "status": "completed"
}
