tests/snapshots/sdk_conversion_snapshots__codex__codex_response_ir_roundtrip.snap
---
source: tests/sdk_conversion_snapshots.rs
expression: items
---
[
  {
    "type": "message",
    "role": "assistant",
    "content": [
      {
        "type": "output_text",
        "text": "Hello! I can help with that."
      }
    ]
  }
]
